--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
   "name": "json-pointer",
   "description": "Some utilities for JSON pointers described by RFC 6901",
-  "version": "0.6.1",
-  "author": "Manuel Stofer <manuel@smallpdf.com>",
+  "version": "1.0.0",
   "license": "MIT",
-  "dependencies": {
-    "foreach": "^2.0.4"
-  },
-  "homepage": "https://github.com/manuelstofer/json-pointer",
+  "dependencies": {},
+  "homepage": "https://github.com/deepakvk/json-pointer",
   "repository": {
     "type": "git",
-    "url": "git://github.com/manuelstofer/json-pointer.git"
+    "url": "git://github.com/deepakvk/json-pointer.git"
   },
-  "devDependencies": {
-    "chai": "^1.9.1",
-    "coveralls": "^2.11.14",
-    "mocha": "^1.9.0",
-    "nyc": "^8.3.1",
-    "seamless-immutable": "^5.1.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "nyc make test"
   },
